fixed overflow hidden issue on body tag

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 font-family: 'Noto Sans HK', sans-serif;
 margin: 0 20px;
 padding: 0;
-overflow: hidden;
+overflow-y: hidden;
 }
 
 h1 {
